--- a/service/package.json
+++ b/service/package.json
@@ -11,6 +11,9 @@
     "test": "jest",
     "typecheck": "tsc --noEmit"
   },
+  "prisma": {
+    "schema": "src/infrastructure/db/schema.prisma"
+  },
   "keywords": [],
   "author": "CJ R. <cj@null.computer> (https://w3cj.now.sh)",
   "repository": {
@@ -19,6 +22,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
@@ -40,6 +44,7 @@
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "prisma": "^5.1.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
