--- a/service/package.json
+++ b/service/package.json
@@ -9,7 +9,9 @@
     "build": "tsc",
     "lint": "eslint --fix src test",
     "test": "jest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "check": "prettier --check '**/*.{css,scss,html,ts}'",
+    "format": "prettier --write '**/*.{css,scss,html,ts}'"
   },
   "prisma": {
     "schema": "src/infrastructure/db/schema.prisma"
@@ -44,6 +46,7 @@
     "eslint-plugin-import": "^2.27.5",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "prettier": "3.0.2",
     "prisma": "^5.1.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
