--- a/service/package.json
+++ b/service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-api-starter-ts",
-  "version": "1.2.0",
-  "description": " A basic starter for an express.js API with Typescript",
+  "name": "hack-the-tunnels-starter",
+  "version": "1.0.0",
+  "description": " The starting template for Hack the Tunnels",
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts",
@@ -17,10 +17,10 @@
     "schema": "src/infrastructure/db/schema.prisma"
   },
   "keywords": [],
-  "author": "CJ R. <cj@null.computer> (https://w3cj.now.sh)",
+  "author": "Carleton Computer Science Society",
   "repository": {
     "type": "git",
-    "url": "https://github.com/w3cj/express-api-starter.git"
+    "url": "https://github.com/CarletonComputerScienceSociety/hack-the-tunnels-starter.git"
   },
   "license": "MIT",
   "dependencies": {
@@ -34,17 +34,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
-    "eslint": "^8.42.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "3.0.2",
     "prisma": "^5.1.1",
