--- a/.github/workflows/frontend-deploy.yaml
+++ b/.github/workflows/frontend-deploy.yaml
@@ -1,9 +1,9 @@
 name: Node Continuous Integration
 
 on:
-  push:
-  # pull_request:
-  #   branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  create:
 
 jobs:
   # Build job
