Add test cypress stuff

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "check": "prettier --check '**/*.{css,scss,html,ts,tsx}'",
-    "format": "prettier --write '**/*.{css,scss,html,ts,tsx}'"
+    "format": "prettier --write '**/*.{css,scss,html,ts,tsx}'",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "localforage": "^1.10.0",
@@ -27,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "cypress": "^13.2.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
