--- a/.github/workflows/test-frontend.yaml
+++ b/.github/workflows/test-frontend.yaml
@@ -8,9 +8,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Start server
+      - name: Install client
         run: |
           cd client
+          npm install
+
+      - name: Install server
+        run: |
+          cd service
           npm install
 
       - uses: cypress-io/github-action@v6
@@ -21,6 +26,7 @@ jobs:
           browser: chrome
           start: |
             npm run dev
+            cd ../service; npm run dev
 
       # after the test run completes store videos and any screenshots
       - uses: actions/upload-artifact@v3
