--- a/.github/workflows/test-frontend.yaml
+++ b/.github/workflows/test-frontend.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: cypress-io/github-action@v6
         with:
           working-directory: client
-          wait-on: 'http://localhost:5173'
+          wait-on: 'http://localhost:5173, http://localhost:5000'
           wait-on-timeout: 120
           browser: chrome
           start: |
