--- a/.github/workflows/test-frontend.yaml
+++ b/.github/workflows/test-frontend.yaml
@@ -16,6 +16,7 @@ jobs:
           echo "cd ../service && npm run dev" >> server.sh
           chmod +x server.sh
           stat server.sh
+          pwd
 
       - name: Install server
         run: |
