--- a/.github/workflows/test-frontend.yaml
+++ b/.github/workflows/test-frontend.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: cypress-io/github-action@v6
         with:
           working-directory: client
-          wait-on: 'http://localhost:5173, http://localhost:5000'
+          wait-on: 'http://localhost:5173, http://localhost:5000/api/v1'
           wait-on-timeout: 30
           browser: chrome
           start: |
