--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
                 "run-script",
                 "dev"
             ],
-            "preLaunchTask": "Install Service Dependencies",
+            "preLaunchTask": "Seed Service Database",
             "outFiles": [
                 "${workspaceFolder}/service/out/**/*.js"
             ]
